--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,5 +1,5 @@
 {
   "globalHeaders": {
-    "Content-Security-Policy": "default-src 'self'; frame-src 'self' https://www.youtube.com https://www.youtube-nocookie.com; script-src 'self' https://www.youtube.com https://www.youtube-nocookie.com https://www.gstatic.com; style-src 'self' 'unsafe-inline'; img-src 'self' https://i.ytimg.com data:;"
+    "Content-Security-Policy": "default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; frame-src https://www.youtube.com https://www.youtube-nocookie.com https://player.vimeo.com data: blob: *; connect-src *; img-src * data: blob:; media-src * data: blob:; script-src * 'unsafe-inline' 'unsafe-eval'; style-src * 'unsafe-inline';"
   }
 }
